<resources>
    <string name="app_name">Petopia</string>
    <string name="messege_undo">추후 업데이트 예정</string>

    <!--  Common : 공통적으로 사용되는 String   -->

    <string name="common_petopia">펫토피아</string>
    <string name="common_memory_bridge">메모리브릿지</string>
    <string name="common_earth">어스</string>

    <string name="common_sign_in">로그인</string>
    <string name="common_sign_up">회원가입</string>
    <string name="common_home">홈</string>
    <string name="common_community">커뮤니티</string>
    <string name="common_my">마이</string>
    <string name="common_gallery">갤러리</string>
    <string name="common_memory">메모리</string>
    <string name="common_letter">편지</string>
    <string name="common_setting">설정</string>

    <string name="common_date">날짜</string>
    <string name="common_title">제목</string>
    <string name="common_id">아이디</string>
    <string name="common_password">비밀번호</string>
    <string name="common_name">이름</string>

    <string name="common_input">입력</string>
    <string name="common_complete">완료</string>
    <string name="common_cancel">취소</string>
    <string name="common_delete">삭제</string>
    <string name="common_end">종료</string>
    <string name="common_ask_delete">삭제하시겠습니까?</string>


    <!--  SignUp : 회원가입에서 사용되는 String -->
    <string name="signup_nickname">보호자 닉네임 (한/영 상관없이 6자 이하)</string>
    <string name="signup_id">아이디 (영문 또는 숫자 12자 이하)</string>
    <string name="signup_password">비밀번호 (8자리 이상)</string>
    <string name="signup_password_check">비밀번호 확인</string>
    <string name="signup_email">이메일</string>
    <string name="signup_agree_all">[필수] 만 14세 이상이며 모두 동의 합니다.</string>
    <string name="signup_terms">이용약관</string>
    <string name="signup_read_all"><u>전체보기</u></string>
    <string name="signup_personal_info_term">개인정보 수집 및 이용 동의</string>

    <!--  SignIn : 로그인에서 사용되는 String  -->
    <string name="signin_id_search">아이디 찾기</string>
    <string name="signin_password_search">비밀번호 찾기</string>
    <string name="signin_autologin_guide">구글 계정으로 간편 로그인</string>
    <string name="signin_by_google">Google로 로그인</string>

    <!--  Main : 메인에서 사용되는 String  -->


    <!--  Home : 홈에서 사용되는 String  -->

    <!--  Guide : 가이드에서 사용되는 String  -->
    <string name="guide_select_appearance">가장 비슷한 외모로 선택해주세요.</string>
    <string name="guide_dog">강아지</string>
    <string name="guide_cat">고양이</string>
    <string name="guide_select_name">반려동물의 이름을 입력해주세요.</string>
    <string name="guide_text_limit_20">이름을 입력해주세요.(20글자 이내)</string>
    <string name="guide_select_relation">반려동물을 생각했을 때\n떠오르는 이미지를 선택해주세요.</string>
    <string name="guide_relation_child">사랑스러운\n아이</string>
    <string name="guide_relation_younger">귀여운\n동생</string>
    <string name="guide_relation_friend">친한\n친구</string>
    <string name="guide_start">펫토피아 화면연결</string>
    <string name="intro_start">시작하기</string>
    <string name="guide_cancel_incomplete">다음에 찾아오시겠어요?\n처음부터 진행됩니다.</string>
    <string name="guide_cancel_complete">가이드를 종료하시겠어요?\n마이페이지에서 다시 보실 수 있습니다.</string>


    <!--  Memory : 메모리에서 사용되는 String  -->
    <string name="memory_example_text">asdfasdfasdfasdfasdfasdfaaasasdfasdfasdfasdfasdfasdfdsdf</string>
    <string name="memory_feed_title">OO이와 추억 모아보기</string>
    <string name="memory_list_title">메모리즈</string>
    <string name="memory_list_rv_title">질문질문질문?</string>
    <string name="memory_question_title">Today\'s Memory</string>
    <string name="memory_add_memory">작성하기</string>
    <string name="memory_content_sample">내용을 입력해주세요</string>


    <!--  Letter : 레터에서 사용되는 String  -->
    <string name="letter_example_text">asdfasdfasdfasdfasdfasdfaaasasdfasdfasdfasdfasdfasdfdsdf</string>
    <string name="letter_feed_title">OO이와 추억 모아보기</string>
    <string name="letter_list_title">편지함</string>
    <string name="letter_list_rv_title">질문질문질문?</string>
    <string name="letter_question_title">Today\'s Memory</string>
    <string name="letter_add_letter">작성하기</string>
    <string name="letter_content_sample">내용을 입력해주세요</string>
    <string name="letter_write_list_title">편지쓰기</string>
    <string name="letter_pad_title">편지지 선택</string>

    <!--  Album : 앨범에서 사용되는 String  -->
    <string name="album_please_enter_title">사진의 제목을 입력해주세요.(16자 이내)</string>
    <string name="common_album">앨범</string>
    <string name="album_select_date">날짜를 선택해주세요.</string>

    <!--  D-Day : 디데이에서 사용되는 String  -->
    <string name="d_day_please_enter_title">디데이의 이름을 입력해주세요.(16자 이내)</string>
    <string name="d_day_dialog_alert_need_permission">알림을 이용하시려면 권한 설정이 필요합니다.</string>


    <!-- Community : 게시판에서 사용되는 String-->
    <string name="community_question_name">글쓰기(질문 게시판)</string>
    <string name="community_detail_writer">작성자 :  </string>
    <string name="community_detail_comment">댓글</string>
    <string name="community_detail_commentCount">개</string>
    <string name="community_detail_edit"><u>수정</u></string>
    <string name="community_detail_comment_edit">댓글 수정</string>
    <string name="community_detail_delete"><u>삭제</u></string>
    <string name="community_detail_hint_comment">댓글을 입력하세요</string>
    <string name="community_create_filtering_dog">강아지</string>
    <string name="community_create_filtering_cat">고양이</string>

    <string name="community_tab_question">질문 게시판</string>
    <string name="community_tab_information">정보 공유 게시판</string>
    <string name="community_tab_gallery">갤러리 게시판</string>


    <!--  Setting : 설정에서 사용되는 String  -->
    <string name="setting_list_title">설정</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_delete_account">회원탈퇴</string>

    <!--  My : 마이페이지에서 사용되는 String  -->
    <string name="modify_nickname">보호자 닉네임</string>
    <string name="modify_email">이메일</string>
    <string name="my_modify_nickname_rule">닉네임을 입력해주세요(한글 또는 영문 최대 6자)</string>

    <string name="exist_passoword">기존 비밀번호</string>
    <string name="modify_passoword">비밀번호</string>
    <string name="modify_password_check">비밀번호 확인</string>
    <string name="delete_user_title">회원탈퇴</string>
    <string name="delete_user_subtitle">회원탈퇴 하시겠습니까?</string>
    <string name="delete_user_content">회원탈퇴시 지금까지 작성한 모든 편지와 글이 \n 수정 불가능 합니다.\n\n지금 탈퇴하시겠습니까?</string>



    <!--  Setting : 설정에서 사용되는 String  -->
    <!--  D : 설정에서 사용되는 String  -->


</resources>