<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_user_delete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.my.DeleteUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="15dp">

        <TextView
            android:id="@+id/tv_user_delete_title"
            style="@style/common_text_24_bold_dark_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/delete_user_title" />


        <TextView
            android:id="@+id/tv_user_delete_content"
            style="@style/common_text_14_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/delete_user_content" />

        <CheckBox
            android:id="@+id/cb_user_delete_last_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="동의합니다." />

        <LinearLayout
            android:id="@+id/user_delete_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <com.skydoves.elasticviews.ElasticButton
                android:id="@+id/btn_user_delete_cancel"
                style="@style/common_text_16_dark_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_white"
                android:padding="4dp"
                android:text="@string/common_cancel"
                app:button_duration="100" />


            <com.skydoves.elasticviews.ElasticButton
                android:id="@+id/btn_user_delete_check"
                style="@style/common_text_16_bold_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_main_blue"
                android:padding="4dp"
                android:text="@string/common_complete"
                app:button_duration="100" />


        </LinearLayout>
    </LinearLayout>

</FrameLayout>