<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="강아지가 너무 귀여워요."
        android:hint="@string/community_detail_hint_comment"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDeleteComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/community_detail_delete"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEditComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/community_detail_edit"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@id/tvDeleteComment"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/tvWriter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="작성자"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tvContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvCreatedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2024.01.01"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvContent"
        app:layout_constraintStart_toEndOf="@+id/tvWriter"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>