<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.register.signup.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="15dp">

        <TextView
            android:id="@+id/tv_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:text="회원가입"
            android:textColor="@color/skyblue"
            android:textSize="26sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_round"
            android:hint="@string/signup_nickname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signup_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_round"
            android:hint="@string/signup_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signup_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_round"
            android:hint="@string/signup_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_round"
            android:hint="@string/signup_password_check">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signup_password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_round"
            android:hint="@string/signup_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/terms_checkbox_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/cb_check_agree_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_agree_all"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_viewmore"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/image_plus"
                app:layout_constraintBottom_toBottomOf="@id/cb_check_agree_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cb_check_agree_all" />

            <CheckBox
                android:id="@+id/cb_check_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/signup_terms"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@id/cb_check_agree_all"
                app:layout_constraintTop_toBottomOf="@id/cb_check_agree_all" />

            <TextView
                android:id="@+id/btn_read_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/signup_read_all"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/cb_check_terms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cb_check_terms" />

            <CheckBox
                android:id="@+id/cb_personal_info_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/signup_personal_info_term"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_check_terms" />

            <TextView
                android:id="@+id/btn_read_terms2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/signup_read_all"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/cb_personal_info_term"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cb_personal_info_term" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/signup_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <android.widget.Button
                android:id="@+id/btn_signup_cancel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/border_round_btn"
                android:backgroundTint="@color/white"
                android:elevation="5dp"
                android:text="@string/signup_btn_cancel"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <android.widget.Button
                android:id="@+id/btn_signup_check"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/border_round"
                android:backgroundTint="@color/skyblue"
                android:text="@string/signup_btn_complete"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>


    </LinearLayout>


</FrameLayout>