<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.my.UserPasswordModifyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="15dp">

        <TextView
            android:id="@+id/tv_modify_password_title"
            style="@style/common_text_24_bold_dark_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:text="비밀번호 설정" />

        <TextView
            android:id="@+id/tv_modify_password_subtitle"
            style="@style/common_text_14_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="비밀번호를 입력해주세요()"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/modify_passoword"
            android:textColorHint="@color/dark_gray"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/main_blue"
            app:boxStrokeErrorColor="@color/error"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/main_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_modify_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="6"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/modify_password_check"
            android:textColorHint="@color/dark_gray"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/main_blue"
            app:boxStrokeErrorColor="@color/error"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/main_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_modify_password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="6"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/signup_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.skydoves.elasticviews.ElasticButton
                android:id="@+id/btn_signup_cancel"
                style="@style/common_text_16_dark_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_white"
                android:padding="4dp"
                android:text="@string/common_cancel"
                app:button_duration="100" />


            <com.skydoves.elasticviews.ElasticButton
                android:id="@+id/btn_signup_check"
                style="@style/common_text_16_bold_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_main_blue"
                android:padding="4dp"
                android:text="@string/common_complete"
                app:button_duration="100" />


        </LinearLayout>
    </LinearLayout>


</FrameLayout>