<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gallery_edit_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_30"
    android:gravity="center"
    tools:context=".presentation.album.AlbumReadFragment">


    <ImageView
        android:id="@+id/gallery_edit_tv_exit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:src="@drawable/sel_btn_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gallery_edit_tv_image_title"
        style="@style/common_text_16_bold_dark_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="사진"
        app:layout_constraintStart_toStartOf="@+id/gallery_edit_tv_exit"
        app:layout_constraintTop_toBottomOf="@+id/gallery_edit_tv_exit" />

    <ImageView
        android:id="@+id/gallery_edit_iv_title_background"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:background="@drawable/img_round_square"
        android:clipToOutline="true"
        android:padding="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_album"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gallery_edit_tv_image_title" />

    <ImageView
        android:id="@+id/gallery_edit_iv_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_translucent_white_square"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/gallery_edit_iv_title_background"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/gallery_edit_iv_title_background"
        app:layout_constraintStart_toStartOf="@+id/gallery_edit_iv_title_background"
        app:layout_constraintTop_toTopOf="@+id/gallery_edit_iv_title_background" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gallery_edit_rv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/gallery_edit_iv_title_background"
                app:layout_constraintStart_toEndOf="@+id/gallery_edit_iv_title_background"
                app:layout_constraintTop_toTopOf="@+id/gallery_edit_iv_title_background" />

    <TextView
        android:id="@+id/gallery_edit_tv_calendar_title"
        style="@style/common_text_16_bold_dark_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/common_date"
        app:layout_constraintStart_toStartOf="@+id/gallery_edit_iv_title_background"
        app:layout_constraintTop_toBottomOf="@+id/gallery_edit_iv_title_background" />


    <TextView
        android:id="@+id/gallery_edit_tv_calendar"
        style="@style/common_text_14_white"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/sel_btn_round_square_blue_white"
        android:gravity="center"
        android:text="@string/common_input"
        app:layout_constraintBottom_toBottomOf="@+id/gallery_edit_tv_calendar_title"
        app:layout_constraintStart_toEndOf="@+id/gallery_edit_tv_calendar_input"
        app:layout_constraintTop_toTopOf="@+id/gallery_edit_tv_calendar_title" />

    <TextView
        android:id="@+id/gallery_edit_tv_calendar_input"
        style="@style/common_text_16_bold_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/album_select_date"
        app:layout_constraintStart_toEndOf="@+id/gallery_edit_tv_calendar_title"
        app:layout_constraintTop_toTopOf="@+id/gallery_edit_tv_calendar_title"
        app:layout_constraintBottom_toBottomOf="@+id/gallery_edit_tv_calendar_title"/>


    <TextView
        android:id="@+id/gallery_edit_tv_title"
        style="@style/common_text_16_bold_dark_gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/common_title"
        app:layout_constraintEnd_toEndOf="@+id/gallery_edit_et_title"
        app:layout_constraintStart_toStartOf="@+id/gallery_edit_iv_title_background"
        app:layout_constraintTop_toBottomOf="@+id/gallery_edit_tv_calendar_input" />


    <EditText
        android:id="@+id/gallery_edit_et_title"
        style="@style/common_text_16_dark_gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_post_create_form"
        android:ems="16"
        android:gravity="center"
        android:hint="@string/gallery_please_enter_title"
        android:inputType="text"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gallery_edit_tv_title"
        app:layout_constraintTop_toBottomOf="@+id/gallery_edit_tv_title" />


    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/gallery_edit_tv_complete"
        style="@style/common_text_16_bold_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_margin="16dp"
        app:button_duration="100"
        android:background="@drawable/bg_main_blue"
        android:text="@string/common_complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


